--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MathVue server",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "request": "^2.85.0"
   },
   "devDependencies": {},
   "scripts": {
