--- a/package.json
+++ b/package.json
@@ -4,8 +4,21 @@
   "description": "MathVue server",
   "main": "server.js",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.10.1",
+    "bootstrap4-dialog": "^4.3.8",
     "express": "^4.17.1",
-    "request": "^2.88.2"
+    "install": "^0.13.0",
+    "jquery": "^3.5.1",
+    "npm": "^7.0.9",
+    "request": "^2.88.2",
+    "showdown": "^1.9.1",
+    "tether": "^1.4.7",
+    "vue": "^2.6.11",
+    "vue-router": "^3.0.7",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {},
   "scripts": {
