--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.10.1",
     "bootstrap4-dialog": "^4.3.8",
+    "browser-detect": "^0.2.28",
     "ccapture.js": "^1.1.0",
     "express": "^4.17.1",
     "install": "^0.13.0",
